--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- JS -->
     <script src="assets/scripts/index.js" defer></script>
+    <script src="assets/scripts/config.js" defer></script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
